# resonance

./: .gitignore  README.md  bun.lockb  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: App.tsx  app.tsx  layout.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/resonance/: avatar.tsx  currentlyPlaying.tsx  navbar.tsx  search.tsx  sidebar.tsx  toaster.tsx
src/components/ui/: command.tsx  dialog.tsx  slider.tsx
src/css/: app.css
src/hooks/: user.ts
src/lib/: averageColor.ts
src/pages/: login.tsx  page.tsx
